# auto-reign

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  reset-data.sh  start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260620_0001_initial_schema.py  20260622_0002_add_follow_up_feedback.py  20260622_0003_add_interview_language.py  20260622_0004_add_workspace_tables.py  20260625_0005_drop_legacy_document_tables.py  20260627_0006_add_interview_turn_feedback_fields.py  20260627_0007_drop_memory_files.py  20260627_0008_split_follow_up_feedback_and_clean_reports.py  20260627_0009_add_learning_conversations.py  20260701_0010_add_conversation_actions.py  20260706_0011_rebuild_local_multi_user_schema.py  20260713_0001_agent_platform_baseline.py  20260713_0002_attachment_integrity.py  20260714_0003_knowledge_attempt_tokens.py  20260716_0004_plain_chat_conversations.py  20260720_0005_knowledge_retriever.py  (+1 more)
backend/app/: main.py
backend/app/api/: admin_users.py  (+20 more)
backend/init_data/: __init__.py  agents.yaml  workspaces.yaml
backend/scripts/: reset_data.py
backend/tests/: conftest.py  fake_object_store.py  fakes.py  sse.py  test_admin_users_api.py  test_agent_home_capability.py  test_agent_home_paths.py  test_agent_home_runtime.py  test_agent_home_service.py  test_agent_runtime.py  test_agents_api.py  test_artifact_document_service.py  test_artifact_permissions.py  test_artifact_service.py  test_attachment_runtime_loader.py  test_attachment_service.py  test_attachments_api.py  test_auth_api.py  test_bootstrap_service.py  test_chat_blocks.py  test_chat_namespace.py  test_chat_stream_store.py  test_chats.py  test_config.py  test_content_renderer.py  test_context_assembler.py  test_conversations.py  test_database.py  test_documents.py  test_embedding_service.py  test_engineering_gates.py  test_extraction_service.py  test_generation_service.py  test_health_and_models.py  test_index_service.py  test_ingestion_service.py  test_interviews.py  test_knowledge_chunk_service.py  test_knowledge_collections_api.py  test_knowledge_document_service.py  (+60 more)
(+364 files in other folders)
