[project]
name = "auto-reign-backend"
version = "0.1.0"
description = "Local-first general Agent chat platform with optional Agent Home and Knowledge RAG."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "boto3>=1.39,<2",
    "fastapi>=0.121,<1",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2,<2",
    "openai>=1.90.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pymysql>=1.1,<2",
    "pypdf>=6.13.3,<6.14",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17,<2",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx2>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["app*", "init_data*"]

[tool.setuptools.package-data]
app = ["prompts/platform/*.md"]
init_data = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
